All tests converted, added pitest